force-app/main/default/objects/Customer_Address_Tax_category__c/Customer_Address_Tax_category__c.object-meta.xml
<CustomObject>
    <label>Customer Address Tax category</label>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Tax category No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Address Tax categorys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>