force-app/main/default/objects/Customer_Address_Tax_category__c/fields/CountryCodeAndCustomerIdF__c.field-meta.xml
<CustomField>
    <fullName>CountryCodeAndCustomerIdF__c</fullName>
    <formula>National_tax_category__r.National_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CountryCode</label>
    <type>Text</type>
</CustomField>