force-app/main/default/objects/Customer_Address_Tax_category__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Customer_Address__c</referenceTo>
    <relationshipLabel>Customer Address Tax category</relationshipLabel>
    <relationshipName>Customer_Address_Tax_category</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>