force-app/main/default/objects/Customer_Address_Tax_category__c/fields/National_tax_category__c.field-meta.xml
<CustomField>
    <fullName>National_tax_category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National tax category</label>
    <referenceTo>National_tax_category__c</referenceTo>
    <relationshipLabel>Customer Tax category</relationshipLabel>
    <relationshipName>Customer_Address_Tax_category</relationshipName>
    <type>Lookup</type>
</CustomField>