force-app/main/default/objects/Customer_Address_Tax_category__c/fields/sortF__c.field-meta.xml
<CustomField>
    <fullName>sortF__c</fullName>
    <formula>TEXT(National_tax_category__r.sort__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sort</label>
    <type>Text</type>
</CustomField>