force-app/main/default/objects/Customer_Address_Tax_category__c/validationRules/Address_tax_category_is_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_tax_category_is_same</fullName>
    <active>true</active>
    <errorConditionFormula>Tax_category_code__c &lt;&gt; &apos;&apos; &amp;&amp; Tax_category__r.Tax_category__c &lt;&gt; &apos;&apos; &amp;&amp;
Tax_category_code__c  &lt;&gt;  Tax_category__r.Tax_category__c</errorConditionFormula>
    <errorDisplayField>Tax_category__c</errorDisplayField>
    <errorMessage>Tax classification Tax category must be eques Tax category</errorMessage>
</ValidationRule>